syntax = "proto3";

package auth;

service Auth {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc SignIn (SignInRequest) returns (SignInResponse);
}

// ------------------- MESSAGES -----------------------

message User {
    int64 id = 1;
    string username = 2;
    string email = 3;
}

// ------------------- COMMON -------------------------

// Sign Up
message SignUpRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message SignUpResponse {
    User user = 1;
    string access_token = 2;
}

// ---------------------------------------------------

// Sign In
message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignInResponse {
    User user = 1;
    string access_token = 2;
}

// ---------------------------------------------------