syntax = "proto3";

package users;

service Users {
    rpc GetUser (GetUserRequest) returns (User);
    rpc CreateUser (CreateUserRequest) returns (User);
}

// ---------------------- MESSAGES ----------------------

// ---------------------- COMMON -----------------------

message User {
    uint32 id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
}

// Get User

message GetUserRequest {
    string username = 1;
}

// Create User

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}